--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <button id="add-btn">Adicionar</button>
         </div>
         <div id="tasks">
-          <p id="pending-tasks">Tarefas pendentes <span class="count-value"> 0</span></p>
+          <p id="pending-tasks">Tarefas pendentes <span class="count-value"></span></p>
         </div>
       </div>
       <p id="error">A entrada não pode ficar vazia</p>
